[gd_scene format=3 uid="uid://dn65h8ukxe5ii"]

[ext_resource type="Script" uid="uid://bmi5o3dbeftdb" path="res://scenes/ui/unit_stat_detailed_ui.gd" id="1_elhhf"]
[ext_resource type="Resource" uid="uid://hmeryarrcif8" path="res://resources/units/warrior_stats.tres" id="2_nvd3y"]
[ext_resource type="Texture2D" uid="uid://cw0rct7dj4gb8" path="res://assets/sprites/ui/slots/Banner_Slots.png" id="3_0doch"]

[node name="UnitStatDetailedUi" type="Control" unique_id=193001353]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_elhhf")
unit_stats = ExtResource("2_nvd3y")

[node name="NinePatchRect" type="NinePatchRect" parent="." unique_id=531574162]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0doch")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect" unique_id=1044926439]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer" unique_id=642158068]
layout_mode = 2

[node name="UnitName" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer" unique_id=446158996]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.23529412, 0.22745098, 0.76862746, 1)
theme_override_font_sizes/font_size = 32
text = "UnitName"
horizontal_alignment = 1

[node name="DamageContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer" unique_id=342226063]
layout_mode = 2
size_flags_vertical = 3

[node name="DamageTypeColorRect" type="ColorRect" parent="NinePatchRect/MarginContainer/VBoxContainer/DamageContainer" unique_id=477921838]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
color = Color(0.12955844, 0.1295585, 0.12955841, 1)

[node name="DamageTypeLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/DamageContainer/DamageTypeColorRect" unique_id=998787512]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -11.5
offset_right = 29.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Piercing
"

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/DamageContainer" unique_id=1574304311]
layout_mode = 2

[node name="DamageColumnLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/DamageContainer/VBoxContainer" unique_id=1501986615]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 0.3647059, 1)
text = "Damage"

[node name="DamageValue" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/DamageContainer/VBoxContainer" unique_id=1696051633]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20"

[node name="ArmorContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer" unique_id=569040812]
layout_mode = 2
size_flags_vertical = 3

[node name="ArmorTypeColorRect" type="ColorRect" parent="NinePatchRect/MarginContainer/VBoxContainer/ArmorContainer" unique_id=967334629]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
color = Color(0.12955844, 0.1295585, 0.12955841, 1)

[node name="ArmorTypeLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/ArmorContainer/ArmorTypeColorRect" unique_id=1279368147]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -11.5
offset_right = 29.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Normal"

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/ArmorContainer" unique_id=1084976790]
layout_mode = 2

[node name="ArmorColumnLAbel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/ArmorContainer/VBoxContainer" unique_id=214094665]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 0.3647059, 1)
text = "Armor"

[node name="ArmorValue" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/ArmorContainer/VBoxContainer" unique_id=826421180]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20"
